# facility_datastoremanager

./: .gitignore  CMakeLists.txt
packaging/configs/sharemind/conf.d/: 20-facility-datastoremanager.conf
packaging/debian/: conffiles
src/: lib.cpp
